--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -59,17 +59,23 @@
     								<input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
     							</div>
     						</div>
-    						<div class="form-group">
+    						<div class="form-group {% if error %}has-error{% endif %}">
     							<label for="password" class="col-sm-3 control-label">Password</label>
     							<div class="col-sm-9">
     								<input type="password" class="form-control" id="password" name="_password" />
+    								{% if error %}
+    									<span class="help-block">
+    										<ul class="list-unstyled">
+    											<li>
+    												<span class="glyphicon glyphicon-exclamation-sign">Invalid Credentials</span>
+    											</li>
+    										</ul>
+    									</span>
+									{% endif %}
     							</div>
-								{% if error %}
-    								<p class="text-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</p>
-								{% endif %}
     						</div>
     						<div class="form-group">
-        						{# <input type="hidden" name="_target_path" value="/" /> #}
+        						<input type="hidden" name="_csrf_token" value="/" /> 
         						<div class="col-sm-3 col-sm-offset-5">
 	    							<button type="submit" class="btn btn-primary">Login</button>
     							</div>
