--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -31,6 +31,7 @@
     							<div class="col-sm-9">
     								<input type="password" class="form-control" id="password" name="_password" />
     								{% if error %}
+                                        {{dump(error)}}
     									<span class="help-block">
     										<ul class="list-unstyled">
     											<li>
@@ -42,7 +43,7 @@
     							</div>
     						</div>
     						<div class="form-group">
-        						<input type="hidden" name="_csrf_token" value="/" /> 
+        						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" /> 
         						<div class="col-sm-3 col-sm-offset-5">
 	    							<button type="submit" class="btn btn-primary">Login</button>
     							</div>
